- Implementa documentação para Get Product By Id.
